Fix larger legend on mobile

--- a/heltour/tournament/static/tournament/css/common.css
+++ b/heltour/tournament/static/tournament/css/common.css
@@ -365,6 +365,7 @@ div.inline {
 }
 
 .legend-swatch {
+	min-width: 20px;
 	width: 20px;
 	height: 20px;
 	border: 1px solid #dddddd;
@@ -373,6 +374,7 @@ div.inline {
 .legend-label {
 	padding-left: 10px;
 	padding-right: 20px;
+	white-space: nowrap;
 }
 
 #table-result-stats {
